This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/11/24: SEM_4-1-4
2/11/24: Made backspace in Edit mode delete the current polygon if it was
created with autocontouring (In 4.1).

2/10/24: Reformatted scope control panel for clearer organization.

2/7/24: Fixed screwed up hybrid montages when property StageMontageMaxError is
set (In 4.1).

2/5/24: Added ability to get message boxes from scripts with monospaced font.

2/5/24: Changed "Fix" button in script editor to re-indent selected lines
properly, equivalent to typing Tab on each one.

2/4/24: Added ability to set text colors and type styles OBin log window and a
script command to set the color and style for the next output; SEMMessageBox
outputs will be red.

2/4/24: Put argument list summary from script help file on the completions
line od a script editor when completion character is typed within or at end of
complete command.

2/4/24: Allowed -1's to be entered for RealignToNavItem to use the imge shift
reset parameters in the Navigtaion Align Setup dialog.

2/4/24: Fixed some problems when completion character is typed in script editor
with Python (In 4.1).

2/4/24: Allowed variables in prompts for userSetDirectory and EnterNameOpenFile
(In 4.1).

2/4/24: Fixed window placement of script editor #60 (In 4.1).

1/31/24: Added script commands for getting the point array of a Navigator
item,  testing if an image file is already open, and finding name of file at a
given index.

1/31/24: Allowed image shift to be reset as part of Realign to Item aligning
to a scaled map if field of view at final mag is large enough.

1/31/24: Fixed Realign to Item skipping alignment to center frame when
switching to a new frame and going to last frame used (broken 1/27).
