@@ -405,6 +405,9 @@
         checkbox or typing 'A' will toggle the 'Acquire' status of the first item and 
         set all the other items summarized on that line to the same status, except for 
         items marked for tilt series.</P>
+    <P><strong>Indexes</strong></P>
+    <P>Use this check box to add a column to the table with the index of each item, 
+      numbered from 1.</P>
       <P><B><A NAME="navgb_showacquire"></A>Show Acquire Area</B></P>
       <P>Use this check box to turn on drawing of a yellow box representing the current 
         acquisition area, centered on the marker point in the current image, which is 
